Further dark mode styling and fixes
Fixes some cursor shenanigans. Seems there are many repeated styles throughout this css.

--- a/src/app.css
+++ b/src/app.css
@@ -11,6 +11,7 @@
 ul[class],
 ol[class] {
   padding: 0;
+  list-style: none;
 }
 
 .sidebar-note-list-item > solid-children {
@@ -49,12 +50,6 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-}
-
-/* Remove list styles on ul, ol elements with a class attribute */
-ul[class],
-ol[class] {
-  list-style: none;
 }
 
 /* A elements that don't have a class get default styles */
@@ -139,6 +134,7 @@ select {
   --dark-gray-80: #6e6e6e;
   --dark-gray-90: #4e4e4e;
   --dark-gray-95: #3a3a3a;
+  --dark-gray-98: #2e2e2e;
   --dark-gray-100: #1e1e1e;
 
   --dark-primary-blue: #2584ff;
@@ -160,7 +156,7 @@ select {
 }
 
 .dark .sidebar {
-  background: var(--dark-gray-95);
+  background: var(--dark-gray-98);
   box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.5); 
 }
 
@@ -173,7 +169,7 @@ select {
 }
 
 .dark .note {
-  background: var(--dark-gray-90);
+  background: var(--dark-gray-95);
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
 }
 
@@ -250,6 +246,22 @@ select {
   box-shadow: var(--dark-outline-blue); 
 }
 
+.dark .sidebar-note-open.is-pending {
+  background-color: var(--gray-90);
+}
+
+.dark .sidebar-note-open.is-active {
+  background-color: var(--dark-tertiary-blue); 
+  border-color: var(--dark-primary-border);
+}
+
+.dark button {
+  /* background-color: var(--dark-primary-blue); */
+  color: greenyellow;
+  border: 1px solid var(--dark-primary-blue);
+  stroke: red;
+}
+
 html {
   font-size: 100%;
 }
@@ -312,6 +324,11 @@ pre code {
 a {
   color: var(--primary-blue);
   text-decoration: none;
+}
+
+button {
+  border: none;
+  cursor: pointer;
 }
 
 .text-with-markdown h1,
@@ -531,7 +548,6 @@ ul.notes-list {
   flex-shrink: 0;
   visibility: hidden;
   opacity: 0;
-  cursor: default;
   transition: visibility 0s linear 20ms, opacity 300ms;
   outline-style: none;
 }
